2010-01-04  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-bzr.el (vc-bzr-state-heuristic): Make it work for lightweight
	checkouts.  (Bug#618)
	(vc-bzr-log-view-mode): Also highlight the author.

2010-01-02  Chong Yidong  <cyd@stupidchicken.com>

	* net/browse-url.el (browse-url-encode-url): Don't escape commas.
	They are valid characters in URL paths (rfc3986), and at least
	Firefox does not understand the encoded version (Bug#3166).

2010-01-02  Daniel Elliott  <danelliottster@gmail.com>  (tiny change)

	* progmodes/octave-mod.el (octave-end-keywords)
	(octave-block-begin-or-end-regexp, octave-block-match-alist): Add
	"end" keyword (Bug#3061).
	(octave-end-as-array-index-p): New function.
	(calculate-octave-indent): Use it.

2010-01-02  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el: Consistently put the text property on the bookmark name.
	(bookmark-bmenu-marks-width): Bump back to 2, to include
	annotation marks.
	(bookmark-bmenu-hide-filenames): Adjust for above, and put the text
	property on the bookmark name, instead of not putting it at all.
	(bookmark-bmenu-list): Fix where we put the text property.

2010-01-02  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el (bookmark-bmenu-save): Just depend on the new logic
	for showing buffer modified state (as added in the previous change).

2010-01-02  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el: Show modified state of bookmark buffer more accurately.
	(bookmark-bmenu-list): Initialize buffer-modified-p properly.
	(bookmark-send-edited-annotation): Mark bookmark-alist as modified.
	(with-buffer-modified-unmodified): New macro.
	(bookmark-bmenu-show-filenames, bookmark-bmenu-hide-filenames)
	(bookmark-bmenu-mark, bookmark-bmenu-unmark, bookmark-bmenu-delete):
	Use new macro to preserve the buffer modified state.

2010-01-02  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el (bookmark-bmenu-select, bookmark-bmenu-1-window,
	(bookmark-bmenu-2-window, bookmark-bmenu-this-window)